<resources>
    <string name="app_name">Trabalho Final</string>
    <string name="login_button">Login</string>
    <string name="password_txt">Password</string>
    <string name="user_txt">Username</string>
    <string name="play_button">Play</string>
    <string name="rank_button">Ranking</string>
    <string name="register_button">Register</string>
    <string name="easy_button">Easy</string>
    <string name="medium_button">Medium</string>
    <string name="hard_button">Hard</string>
    <string name="exit_button">Exit</string>
    <string name="return_button">Return</string>
    <string name="finish_button">Finish</string>
    <string name="email_txt">Email</string>
</resources>
